--- a/PORT.KF5/batchprocessimages/CMakeLists.txt
+++ b/PORT.KF5/batchprocessimages/CMakeLists.txt
@@ -9,7 +9,7 @@ subdirs(icons)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/common
                     ${CMAKE_CURRENT_SOURCE_DIR}/plugin
                     ${CMAKE_CURRENT_SOURCE_DIR}/tools
-                    ${KDE4_INCLUDES}
+                    
                     ${KDE4_INCLUDE_DIR}
                     ${QT_INCLUDES}
                    )
@@ -39,21 +39,21 @@ set(kipiplugin_batchprocessimages_PART_SRCS
     tools/resizeoptionsdialog.cpp
     )
 
-KDE4_ADD_UI_FILES(kipiplugin_batchprocessimages_PART_SRCS
+ki18n_wrap_ui(kipiplugin_batchprocessimages_PART_SRCS
                   ui/batchprocessimagesdialog.ui
                   ui/imagepreview.ui
                   ui/renameimagesbase.ui
                  )
 
-KDE4_ADD_PLUGIN(kipiplugin_batchprocessimages ${kipiplugin_batchprocessimages_PART_SRCS})
+add_library(kipiplugin_batchprocessimages MODULE ${kipiplugin_batchprocessimages_PART_SRCS})
 
 target_link_libraries(kipiplugin_batchprocessimages
                       kipiplugins
-                      ${KIPI_LIBRARIES}
-                      ${KEXIV2_LIBRARIES}
-                      ${KDE4_KDECORE_LIBS}
-                      ${KDE4_KIO_LIBS}
-                      ${KDE4_KDEUI_LIBS}
+                      KF5::Kipi
+                      KF5::KExiv2
+                      KF5::KDELibs4Support
+                      KF5::KIOCore
+                      
                      )
 
 configure_file(plugin/kipiplugin_batchprocessimages.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/plugin/kipiplugin_batchprocessimages.desktop)
