--- a/PORT.KF5/metadataedit/CMakeLists.txt
+++ b/PORT.KF5/metadataedit/CMakeLists.txt
@@ -47,14 +47,14 @@ set(kipiplugin_metadataedit_PART_SRCS plugin/plugin_metadataedit.cpp
                                       xmp/xmpproperties.cpp
    )
 
-KDE4_ADD_PLUGIN(kipiplugin_metadataedit ${kipiplugin_metadataedit_PART_SRCS})
+add_library(kipiplugin_metadataedit MODULE ${kipiplugin_metadataedit_PART_SRCS})
 
 target_link_libraries(kipiplugin_metadataedit
-                      ${KDE4_KPARTS_LIBS}
-                      ${QT_AND_KDECORE_LIBS}
-                      ${KIPI_LIBRARIES}
-                      ${KEXIV2_LIBRARIES}
-                      ${KDCRAW_LIBRARIES}
+                      KF5::Parts
+                      
+                      KF5::Kipi
+                      KF5::KExiv2
+                      KF5::KDcraw
                       kipiplugins
                      )
 
