--- a/PORT.KF5/htmlexport/CMakeLists.txt
+++ b/PORT.KF5/htmlexport/CMakeLists.txt
@@ -19,30 +19,30 @@ set(kipiplugin_htmlexport_SRCS
     wizard.cpp
    )
 
-KDE4_ADD_UI_FILES(kipiplugin_htmlexport_SRCS
+ki18n_wrap_ui(kipiplugin_htmlexport_SRCS
                   imagesettingspage.ui
                   outputpage.ui
                   themepage.ui
                   themeparameterspage.ui
                  )
 
-KDE4_ADD_KCFG_FILES(kipiplugin_htmlexport_SRCS
+kconfig_add_kcfg_files(kipiplugin_htmlexport_SRCS
                     htmlexportconfig.kcfgc
                    )
 
-KDE4_ADD_PLUGIN(kipiplugin_htmlexport ${kipiplugin_htmlexport_SRCS})
+add_library(kipiplugin_htmlexport MODULE ${kipiplugin_htmlexport_SRCS})
 
 target_link_libraries(kipiplugin_htmlexport
-                      ${KIPI_LIBRARIES}
-                      ${KEXIV2_LIBRARIES}
-                      ${KDCRAW_LIBRARIES}
+                      KF5::Kipi
+                      KF5::KExiv2
+                      KF5::KDcraw
                       ${LIBXSLT_EXSLT_LIBRARIES}
                       ${LIBXSLT_LIBRARIES}
                       ${LIBXML2_LIBRARIES}
-                      ${KDE4_KDECORE_LIBS}
-                      ${KDE4_KIO_LIBS}
-                      ${QT_QTCORE_LIBRARY}
-                      ${QT_QTGUI_LIBRARY}
+                      KF5::KDELibs4Support
+                      KF5::KIOCore
+                      Qt5::Core
+                      Qt5::Gui
                       kipiplugins
                      )
 
