--- a/PORT.KF5/photivointegration/CMakeLists.txt
+++ b/PORT.KF5/photivointegration/CMakeLists.txt
@@ -16,14 +16,14 @@ set(kipiplugin_photivointegration_PART_SRCS xmpmm.cpp
                                             plugin_photivointegration.cpp
    )
 
-KDE4_ADD_PLUGIN(kipiplugin_photivointegration ${kipiplugin_photivointegration_PART_SRCS})
+add_library(kipiplugin_photivointegration MODULE ${kipiplugin_photivointegration_PART_SRCS})
 
 target_link_libraries(kipiplugin_photivointegration
-                      ${KDE4_KPARTS_LIBS}
-                      ${QT_AND_KDECORE_LIBS}
-                      ${KIPI_LIBRARIES}
-                      ${KEXIV2_LIBRARIES}
-                      ${KDCRAW_LIBRARIES}
+                      KF5::Parts
+                      
+                      KF5::Kipi
+                      KF5::KExiv2
+                      KF5::KDcraw
                       kipiplugins
                      )
 
