Fix icons support

--- a/PORT.KF5/calendar/CMakeLists.txt
+++ b/PORT.KF5/calendar/CMakeLists.txt
@@ -4,6 +4,8 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
+add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_calendar\")
+
 set(kipiplugin_calendar_PART_SRCS plugin/plugin_calendar.cpp
                                   print/calpainter.cpp
                                   print/calprinter.cpp
