--- a/PORT.KF5/flashexport/icons/CMakeLists.txt
+++ b/PORT.KF5/flashexport/icons/CMakeLists.txt
@@ -4,4 +4,4 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-KDE4_INSTALL_ICONS( ${ICON_INSTALL_DIR} )
+ecm_install_icons( ICONS hi128-apps-kipi-flash.png  hi16-apps-kipi-flash.png  hi22-apps-kipi-flash.png  hi32-apps-kipi-flash.png  hi48-apps-kipi-flash.png DESTINATION ${ICON_INSTALL_DIR} )
