--- a/PORT.KF5/jpeglossless/icons/CMakeLists.txt
+++ b/PORT.KF5/jpeglossless/icons/CMakeLists.txt
@@ -4,4 +4,4 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-kde4_install_icons ( ${ICON_INSTALL_DIR} )
+ecm_install_icons ( ${ICON_INSTALL_DIR} )
