--- a/PORT.KF5/piwigoexport/icons/CMakeLists.txt
+++ b/PORT.KF5/piwigoexport/icons/CMakeLists.txt
@@ -4,6 +4,6 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-KDE4_INSTALL_ICONS( ${ICON_INSTALL_DIR} )
+ecm_install_icons( ${ICON_INSTALL_DIR} )
 
 
