--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -353,7 +353,7 @@ if(KF5Kipi_FOUND)
 #         add_subdirectory(kioexportimport)
 #         add_subdirectory(picasawebexport)
 #         add_subdirectory(smug)
-#         add_subdirectory(printimages)
+         add_subdirectory(printimages)
 #         add_subdirectory(expoblending)
 #         add_subdirectory(kopete)
 #         add_subdirectory(batchprocessimages)
