--- a/sendimages/CMakeLists.txt
+++ b/sendimages/CMakeLists.txt
@@ -17,7 +17,7 @@ set(kipiplugin_sendimages_PART_SRCS imageresize.cpp
 add_library(kipiplugin_sendimages MODULE ${kipiplugin_sendimages_PART_SRCS})
 
 target_link_libraries(kipiplugin_sendimages
-                      kipiplugins
+                      KF5kipiplugins
                       KF5::Parts
                       KF5::Kipi
                       KF5::KExiv2
